# claude-parser

./: .actrc  .clauderc  .coveragerc  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-push  .secrets  API_LAYERING_AUDIT.md  AUTOMATION.md  BACKLOG_IMPLEMENTATION_COMPLETE.md  BUSINESS_LOGIC_ISSUES.md  CG_PRODUCTION_READY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CRITICAL_GAPS_ACTION_PLAN.md  DEPENDENCY_BUG_ANALYSIS.md  DSTASK_NOTE_FIX.md  DUCKDB_MIGRATION_PLAN.md  DUCKDB_REPLACEMENT_CHECKLIST.md  FEATURE_REQUEST.md  FIX_SKIPPED_TESTS.md  FRAMEWORK_DELEGATION_MAP.md  GIT_HOOKS_COMPLETE.md  HANDOFF_MESSAGE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_FIX_PLAN.md  INTEGRATION_READY.md  ISSUE_TRACKING_STATUS.md  MD_ORGANIZATION_PLAN.md  MIGRATION.md  MIGRATION_REALITY.md  Makefile  PRODUCTION_DATA_SPECIFICATION.md  README.md  (+62 more)
.claude/: CG_IMPLEMENTATION_ROADMAP.md  CG_LNCA_COMPLIANT_PLAN.md  CLAUDE.md  GLOBAL_CLAUDE_NEW.md  LOCAL_ENFORCEMENT.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  NEURAL_TAG_ARCHITECTURE.md  SYNC_LNCA_INSTRUCTIONS.md  docs_metadata.json  living_document.md  memory_map.md  service_catalog.md
changelog.d/: changelog_template.jinja  token-count-fix.md
claude_parser/: __init__.py  __init___clean.py  bootstrap.py  cg_cli.py  cli.py  constants.py  conversation.py  feature_registry.py  intelligent_cli.py  models.py  msgspec_models.py  new_api.py  parser.py  timeline.py  watch_async.py
docs/: API_REFERENCE.md  BACKLOG_COMPARISON.md  BACKLOG_SYSTEM.md  CG_COMMAND_REFERENCE.md  CG_GIT_ALIGNED_DESIGN.md  CG_RECOVERY_GUIDE.md  CHANGELOG.md  INTEGRATION_GUIDE.md  JSONL-STRUCTURE.md  JSONL_STRUCTURE_COMPLETE.md  LIBRARY_FIRST_RULE.md  LIBRARY_VIOLATIONS_PROOF.md  MD_ORGANIZATION_PLAN.md  PROJECT_STATUS.md  QUICK_RULES.md  README_GITHUB.md  SEMANTIC_SEARCH_INTEGRATION.md  TIMELINE_APPLICATIONS.md  TIMELINE_DOMAIN.md  api.md  cg-command-reference.md  cg-git-interface.md  cg-release-summary.md  documentation-summary.md  index.md  installation.md  llamaindex_integration.md  local-ci-testing.md  mem0_audit_summary.md  multi-session-guide.md  real-claude-code-integration-complete.md  real-claude-jsonl-structure.md
examples/: llamaindex_integration.py  monitor_context_usage.py  sse_streaming.py  todo_demo.py  todo_manager_demo.py  todo_swiper_demo.py
report/: jscpd-report.json
scripts/: audit_tasks.py  backlog_dashboard.py  backlog_priorities.py  check_inventory_sync.py  codebase_inventory.py  create_baseline.py  create_enforced_task.py  ctask  detect_unused.py  discover_jsonl_structure.py  discover_structure_simple.py  dstask-pre-commit-hook.sh  enforce_context.py  feature_matrix.py  install_dstask_hooks.py  manage_backlog.py  prepare_release.sh  research.py  semantic_search.py  setup-automation.sh  test-local-ci.sh  validate_task.py  verification_config.py  verify_spec.py  verify_spec_v2.py
test-archive/: test_cg_demo.txt  test_diff.txt
test_folder/: main.py
tests/: TEST_COVERAGE_MAP.md  __init__.py  conftest.py  constants.py  discover_schema_genson.py  discover_session_boundaries.py  fixtures.py  real_test_data.py  test_analytics.py  test_api.py  test_api_contract.py  test_application_service_bugs.py  test_bug_toolz_map.py  test_cg_blame_tdd.py  test_cg_checkout_tdd.py  test_cg_cli.py  test_cg_commands.py  test_cg_diff_command.py  test_cg_diff_files.py  test_cg_integration.py  test_cg_integration_new.py  test_cg_log_tdd.py  test_cg_status_tdd.py  (+72 more)
(+424 files in other folders)
