[tool.poetry]
name = "claude-parser"
version = "2.0.0"
description = "Parse and analyze Claude Code JSONL exports"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "claude_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.10.0"
pydantic = "^2.0.0"
pendulum = "^3.0.0"
loguru = "^0.7.0"
jsonlines = "^4.0.0"
jmespath = "^1.0.1"
diskcache = "^5.6.3"
deepdiff = "^8.6.0"
gitpython = "^3.1.45"
more-itertools = "^10.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[tool.poetry.group.watch]
optional = true

[tool.poetry.group.watch.dependencies]
watchfiles = "^0.21.0"
blinker = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true