[tool.poetry]
name = "claude-parser"
version = "2.0.1"
description = "Parse and analyze Claude Code JSONL exports"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "claude_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
rich = "^13.9.4"
pydantic = "^2.10.5"
polars = "^1.17.1"
duckdb = "^1.1.3"
pathlib = "^1.0.1"
watchdog = "^6.0.0"
fs = "^0.5.4"
pyfilesystem2 = "^2.4.16"
pluggy = "^1.5.0"
setuptools = "^75.8.0"
dulwich = "^0.22.8"
platformdirs = "^4.3.6"
more-itertools = "^10.5.0"
tiktoken = "^0.8.0"
anyio = "^4.8.0"
httpx = "^0.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.2.1"
ruff = "^0.8.6"
ipython = "^8.30.0"
llama-index = "^0.12.17"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.47"
pytest-mock = "^3.14.0"
towncrier = "^25.8.0"

[tool.poetry.scripts]
cg = "claude_parser.cli.cg:app"
ch = "claude_parser.cli.ch:ch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.towncrier]
# The name of your project
package = "claude_parser"
package_dir = "."
# The name of the file to generate
filename = "CHANGELOG.md"
# The directory for news fragments
directory = "changelog.d"
# The template for the changelog
template = "changelog.d/changelog_template.jinja"
# The title format for the changelog
title_format = "## [{version}] - {project_date}"
# Set to false to not include the date
underlines = ["", "", ""]
start_string = "<!-- towncrier release notes start -->\n"

# Define the fragment types
[[tool.towncrier.type]]
directory = "security"
name = "Security Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false